# newsletter-delivery

./: Cargo.toml  Dockerfile  diesel.toml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/2024-08-26-131209_create_subscription_table/: down.sql  up.sql
migrations/2024-09-03-123554_add_status_to_subscriptions/: down.sql
migrations/2024-09-03-130126_make_status_not_null_in_subscriptions/: down.sql  up.sql
migrations/2024-09-03-131317_create_subscription_tokens_table/: down.sql  up.sql
migrations/2024-09-11-055801_create_users_table/: up.sql
migrations/2024-09-12-131909_seed_user/: down.sql  up.sql
migrations/2024-09-17-125821_create_idempotency_table/: down.sql  up.sql
migrations/2024-09-18-133204_relax_null_check_on_idempotency_table/: down.sql  up.sql
migrations/2024-09-19-153619_create_newsletter_issues_table/: down.sql  up.sql
migrations/2024-09-19-163123_create_issue_delivery_queue_table/: down.sql  up.sql
migrations/2024-09-21-162655_create_state_column_task_queue/: down.sql  up.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  block_email_client.rs  configuration.rs  domain.rs  email_client.rs  ipchecker.rs  issue_delivery_worker.rs  lib.rs  main.rs  models.rs  schema.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/diesel_adapter/: subscription_repository.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter_delivery.rs  subscribe.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/delivery/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
src/services/: mod.rs  subscription.rs
src/traits/: mod.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter_delivery.rs  subscriptions.rs  subscriptions_confirm.rs
