[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
config = "0.14.0"
diesel = { version = "2.2.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
tokio = "1.39.3"
uuid = { version = "1.10.0", features = ["v4"] }
