[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
config = "0.14.0"
diesel = { version = "2.2.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
once_cell = "1.19.0"
reqwest = "0.12.7"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = "1.39.3"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
uuid = { version = "1.10.0", features = ["v4"] }
