[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
claim = "0.5.0"
config = "0.14.0"
diesel = { version = "2.2.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
fake = "2.3"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"
wiremock = "0.6.1"
